# py-invariants

./: .gitignore  README.md  pyproject.toml  requirements-test.txt  setup.py  tox.ini
.github/workflows/: deploy.yml  publish.yml  test.yml
complexheart/domain/: models.py
complexheart/domainmodel/: __init__.py  invariants.py
features/: invariants.feature
features/steps/: invariants.py
tests/domain/: test_models.py
