[tool.poetry]
name = "complexheart"
version = "0.0.1"
license = "MIT"
readme = 'README.md'
description = "Provide a set of useful classes and tools to ease the adoption of Domain-Driven Design into your Python project."
repository = 'https://github.com/ComplexHeart/py-sdk'
authors = [
    "Unay Santisteban <usantisteban@othercode.es>"
]
keywords = [
    'python',
    'ddd',
    'hexagonal architecture',
    'clean architecture',
    'value objects',
]

packages = [
    { include = "complexheart" },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "*"
pytest-mock = "^3.3.1"
coverage = { extras = ["toml"], version = "*" }
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=complexheart --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml"

[tool.coverage.run]
omit = ["tests/*", "venv*/*", "setup.py"]
relative_files = true
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "import",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
skip_covered = true
